--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
 .sub{
     background-color: aquamarine;
 }
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column{
+    box-sizing: border-box;
+  }
+  
+  .column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+  
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
